--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                     <div class="carousel-item active" data-bs-interval="10000">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1 class="mb-5 font-weight-bold ">Get Started Digital <br /> Learning</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
+                            <h1 class="mb-5 font-weight-bold text-white ">Get Started Digital <br /> Learning</h1>
+                            <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of
                                 a page when looking at its layout.</p>
                             <button class="btn btn-primary mb-5">Get Started</button>
                         </div>
@@ -93,8 +93,8 @@
                     <div class="carousel-item" data-bs-interval="2000">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1 class="mb-5 font-weight-bold ">Get Started Digital <br /> Learning</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
+                            <h1 class="mb-5 font-weight-bold text-white">Get Started Digital <br /> Learning</h1>
+                            <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of
                                 a page when looking at its layout.</p>
                             <button class="btn btn-primary mb-5">Get Started</button>
                         </div>
@@ -102,8 +102,8 @@
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1 class="mb-5 font-weight-bold ">Get Started Digital <br /> Learning</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
+                            <h1 class="mb-5 font-weight-bold text-white">Get Started Digital <br /> Learning</h1>
+                            <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of
                                 a page when looking at its layout.</p>
                             <button class="btn btn-primary mb-5">Get Started</button>
                         </div>
@@ -145,9 +145,52 @@
                         </div>
                         <div class="col-md-9">
                             <h4>Fundamental Of UI/UX Design</h4>
-                            <p class="text-secondary mb-1">Some quick example text to build on the card title and make
-                                up the bulk of the card.</p>
+                            <p class="text-secondary mb-1">The five main principles of UX design. There are many important principles within UX design but to simplify things a bit, we've broken them down into five main concepts.</p>
                             <h4 class="text-primary">Price : 20$</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12  shadow p-2 col-lg-6 ">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-12"><img src="images/course/course-2.png" alt="" class="img-fluid h-100">
+                        </div>
+                        <div class="col-md-9">
+                            <h4>Fullstack Web Development</h4>
+                            <p class="text-secondary mb-1">A full stack web developer is a person who can develop both client and server software. In addition to mastering HTML and CSS, he/she also knows how to: Program a browse.</p>
+                            <h4 class="text-primary">Price : 25$</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12  shadow p-2 col-lg-6 ">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-12"><img src="images/course/course-3.png" alt="" class="img-fluid h-100">
+                        </div>
+                        <div class="col-md-9">
+                            <h4>Motion Graphics</h4>
+                            <p class="text-secondary mb-1">Motion graphics (sometimes mograph) are pieces of animation or digital footage which create the illusion of motion or rotation, and are usually combined with audio for use in multimedia projects.</p>
+                            <h4 class="text-primary">Price : 20$</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12  shadow p-2 col-lg-6 ">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-12"><img src="images/course/course-4.png" alt="" class="img-fluid h-100">
+                        </div>
+                        <div class="col-md-9">
+                            <h4>Digital Marketing</h4>
+                            <p class="text-secondary mb-1">Digital marketing, also called online marketing, is the promotion of brands to connect with potential customers using the internet and other forms of digital communication.</p>
+                            <h4 class="text-primary">Price : 20$</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12  shadow p-2 col-lg-6 ">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-12"><img src="images/course/course-5.png" alt="" class="img-fluid h-100">
+                        </div>
+                        <div class="col-md-9">
+                            <h4>Photography Basic Rules</h4>
+                            <p class="text-secondary mb-1">If your shot is in danger of losing impact due to a busy background/surroundings, crop in tight around your main point of focus, eliminating the background so all attention falls on your main subject.</p>
+                            <h4 class="text-primary">Price : 22$</h4>
                         </div>
                     </div>
                 </div>
@@ -156,58 +199,9 @@
                         <div class="col-md-3 col-sm-12"><img src="images/course/course-1.png" alt="" class="img-fluid h-100">
                         </div>
                         <div class="col-md-9">
-                            <h4>Fundamental Of UI/UX Design</h4>
-                            <p class="text-secondary mb-1">Some quick example text to build on the card title and make
-                                up the bulk of the card.</p>
-                            <h4 class="text-primary">Price : 20$</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12  shadow p-2 col-lg-6 ">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-12"><img src="images/course/course-1.png" alt="" class="img-fluid h-100">
-                        </div>
-                        <div class="col-md-9">
-                            <h4>Fundamental Of UI/UX Design</h4>
-                            <p class="text-secondary mb-1">Some quick example text to build on the card title and make
-                                up the bulk of the card.</p>
-                            <h4 class="text-primary">Price : 20$</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12  shadow p-2 col-lg-6 ">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-12"><img src="images/course/course-1.png" alt="" class="img-fluid h-100">
-                        </div>
-                        <div class="col-md-9">
-                            <h4>Fundamental Of UI/UX Design</h4>
-                            <p class="text-secondary mb-1">Some quick example text to build on the card title and make
-                                up the bulk of the card.</p>
-                            <h4 class="text-primary">Price : 20$</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12  shadow p-2 col-lg-6 ">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-12"><img src="images/course/course-1.png" alt="" class="img-fluid h-100">
-                        </div>
-                        <div class="col-md-9">
-                            <h4>Fundamental Of UI/UX Design</h4>
-                            <p class="text-secondary mb-1">Some quick example text to build on the card title and make
-                                up the bulk of the card.</p>
-                            <h4 class="text-primary">Price : 20$</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12  shadow p-2 col-lg-6 ">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-12"><img src="images/course/course-1.png" alt="" class="img-fluid h-100">
-                        </div>
-                        <div class="col-md-9">
-                            <h4>Fundamental Of UI/UX Design</h4>
-                            <p class="text-secondary mb-1">Some quick example text to build on the card title and make
-                                up the bulk of the card.</p>
-                            <h4 class="text-primary">Price : 20$</h4>
+                            <h4>Javascript Basic to advanced</h4>
+                            <p class="text-secondary mb-1">‌If you're learning on your own, it can take six to nine months to become proficient in JavaScript. Some of that time is spent learning how to think like a programmer — helpful for when you move on to learning other programming languages.</p>
+                            <h4 class="text-primary">Price : 30$</h4>
                         </div>
                     </div>
                 </div>
