--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 
            <!-- Nav Part  -->
+
            <div class="container">
             <nav class="m-auto navbar navbar-expand-lg navbar-light " style="flex-wrap: nowrap; ">
             <div class="container ">
@@ -65,9 +66,6 @@
 
 
 
-
-
-    
 
     <section>
         <div class="container">
@@ -322,18 +320,14 @@
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                                 aria-controls="panelsStayOpen-collapseOne">
-                                Accordion Item #1
+                                Flex Box vs Grid
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                             aria-labelledby="panelsStayOpen-headingOne">
                             <div class="accordion-body">
-                                <strong>This is the first item's accordion body.</strong> It is shown by default, until
-                                the collapse plugin adds the appropriate classes that we use to style each element.
-                                These classes control the overall appearance, as well as the showing and hiding via CSS
-                                transitions. You can modify any of this with custom CSS or overriding our default
-                                variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>The most important thing to know is that flexbox is one-dimensional, while CSS Grid is two-dimensional. Flexbox lays out items along either the horizontal or the vertical axis, so you have to decide whether you want a row-based or a column-based layout. The flexbox cross axis is always perpendicular to the main axis.
+                            </strong>
                             </div>
                         </div>
                     </div>
@@ -342,18 +336,13 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseTwo">
-                                Accordion Item #2
+                                Bootstrap vs Tailwind
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">
-                                <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                until the collapse plugin adds the appropriate classes that we use to style each
-                                element. These classes control the overall appearance, as well as the showing and hiding
-                                via CSS transitions. You can modify any of this with custom CSS or overriding our
-                                default variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>Bootstrap's utility and layout classes provide you with everything you need to style a responsive webpage. With Tailwind, however, you are much more involved in styling the webpage because you end up having to create your own components using the utility classes that the framework offers.</strong>
                             </div>
                         </div>
                     </div>
@@ -362,18 +351,13 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseThree">
-                                Accordion Item #3
+                                What is CSS Box Model
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
-                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until
-                                the collapse plugin adds the appropriate classes that we use to style each element.
-                                These classes control the overall appearance, as well as the showing and hiding via CSS
-                                transitions. You can modify any of this with custom CSS or overriding our default
-                                variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>In CSS, the term "box model" is used when talking about design and layout. The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.</strong> 
                             </div>
                         </div>
                     </div>
@@ -382,18 +366,13 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseFour">
-                                Accordion Item #4
+                                What is semantic extension with example
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingFour">
                             <div class="accordion-body">
-                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until
-                                the collapse plugin adds the appropriate classes that we use to style each element.
-                                These classes control the overall appearance, as well as the showing and hiding via CSS
-                                transitions. You can modify any of this with custom CSS or overriding our default
-                                variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>For example, the words "before" and "after" do not apply to objects individually—it makes no sense to say "Jim is before" or "Jim is after"—but to one thing in relation to another, as in "The wedding is before the reception" and "The reception is after the wedding"..</strong> 
                             </div>
                         </div>
                     </div>
@@ -432,17 +411,17 @@
     <section>
         <div class=" mt-4">
             <div class="row bg-dark text-center text-light py-5">
-                <h1>Pro Edu</h1>
-                <p>Office 41, Zawaya Buildin, Ghala Muscat, </p>
-                <p>Sultanate of Oman</p>
+                <h1>Easy Learning Education</h1>
+                <p>Matuail, Jatrabari, Dhaka Bangladesh, </p>
+                <p>Sultanate of Dhaka</p>
                 <p>Privacy Ploicy | Terms of use</p>
 
                 <div class=" text-center">
-                    <button class="btn fs-2  "><a href=""><i class="fa-brands fa-facebook"></i></a></button>
+                    <button class="btn fs-2  "><a href="https://www.facebook.com/md.aklasur/"><i class="fa-brands fa-facebook"></i></a></button>
 
-                <button class="btn fs-2"><a href=""><i class="fa-brands fa-twitter"></i>
+                <button class="btn fs-2"><a href="https://www.linkedin.com/feed/"><i class="fa-brands fa-twitter"></i>
                 </a></button>
-               <button class="btn fs-2"> <a href=""><i class="fa-brands fa-linkedin"></i></a></button>
+               <button class="btn fs-2"> <a href="https://www.instagram.com/aklasur_rahman_robin/"><i class="fa-brands fa-linkedin"></i></a></button>
                 </div>
             </div>
         </div>
