--- a/index.html
+++ b/index.html
@@ -222,13 +222,9 @@
             <div class="row">
                 <div class="col-md-3"><img src="images/student/student-1.png" alt="" class="img-fluid h-100"></div>
                 <div class="col-md-9">
-                    <h2>Explore The elearning Institute</h2>
-                    <p class="text-secondary mb-4">There are many variations of passages of Lorem Ipsum available, but
-                        the majority have suffered alteration in some form, by injected humour, or randomised words
-                        which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you
-                        need to be sure.</p>
-                    <p class="mb-4 text-secondary">Anything embarrassing hidden in the middle of text. All the Lorem
-                        Ipsum generators on the Internet tend to repeat predefined.</p>
+                    <h2>Explore The E-learning Institute</h2>
+                    <p class="text-secondary mb-4">E-learning is a type of learning conducted digitally via electronic media, typically involving the internet. It can be accessed via most electronic devices including a computer, laptop, tablet or smartphone, making it a versatile and easy way for students to learn wherever they are.</p>
+                    <p class="mb-4 text-secondary">Online Learning Accommodates Everyone's Needs. The online method of learning is best suited for everyone.</p>
 
                     <button class="btn btn-primary">Read More</button>
 
@@ -303,8 +299,7 @@
                     <h1>Frequently Asked Questions
 
                     </h1>
-                    <p>It is a long established fact that a reader will be distracted by the readable content <br />of a
-                        page when looking at its layout.</p>
+                    <p>In FAQ page is a time-saving customer service tactic that provides the most commonly asked questions and answers for current or potential customers.</p>
                 </div>
             </div>
         </div>
