--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#About">Deals</a>
+                <a class="nav-link" aria-current="page" href="#Deals">Deals</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#Contact"
+                <a class="nav-link" aria-current="page" href="#Success"
                   >Success</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#Contact"
+                <a class="nav-link" aria-current="page" href="#About"
                   >About</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#Contact"
+                <a class="nav-link" aria-current="page" href="#Register"
                   >Register</a
                 >
               </li>
@@ -600,7 +600,7 @@
                     objects individually—it makes no sense to say "Jim is
                     before" or "Jim is after"—but to one thing in relation to
                     another, as in "The wedding is before the reception" and
-                    "The reception is after the wedding"..</strong
+                    "The reception is after the wedding".</strong
                   >
                 </div>
               </div>
