--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       src="https://kit.fontawesome.com/7df0f8f064.js"
       crossorigin="anonymous"
     ></script>
-  </head>
 
-  <body>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+  </head>
 
+  <body>
     <!-- Nav Part  -->
 
     <div class="container">
@@ -112,10 +112,11 @@
             <div class="carousel-item active" data-bs-interval="10000">
               <img
                 src="images/cover/cover-1.png"
+                height="600px"
                 class="d-block w-100"
                 alt="..."
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h1 class="mb-5 font-weight-bold text-white">
                   Get Started Digital <br />
                   Learning
@@ -130,10 +131,11 @@
             <div class="carousel-item" data-bs-interval="2000">
               <img
                 src="images/cover/cover-2.jpg"
+                height="600px"
                 class="d-block w-100"
                 alt="..."
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h1 class="mb-5 font-weight-bold text-white">
                   Get Started Digital <br />
                   Learning
@@ -148,10 +150,11 @@
             <div class="carousel-item">
               <img
                 src="images/cover/cover-3.jpg"
+                height="600px"
                 class="d-block w-100"
                 alt="..."
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h1 class="mb-5 font-weight-bold text-white">
                   Get Started Digital <br />
                   Learning
@@ -201,14 +204,14 @@
     <!-- Course  -->
     <section>
       <div class="container mt-5">
-        <div class="row g-5">
-          <div class="col-md-12 shadow p-2 col-lg-6">
+        <div class="row g-2">
+          <div class="col-md-12 shadow p-2 col-lg-6 border rounded">
             <div class="row">
               <div class="col-md-3 col-sm-12">
                 <img
                   src="images/course/course-1.png"
                   alt=""
-                  class="img-fluid h-100"
+                  class="img-fluid w-100 h-100 w-100"
                 />
               </div>
               <div class="col-md-9">
@@ -222,13 +225,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 shadow p-2 col-lg-6">
+          <div class="col-md-12 shadow p-2 col-lg-6 border rounded">
             <div class="row">
               <div class="col-md-3 col-sm-12">
                 <img
                   src="images/course/course-2.png"
                   alt=""
-                  class="img-fluid h-100"
+                  class="img-fluid w-100 h-100"
                 />
               </div>
               <div class="col-md-9">
@@ -242,13 +245,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 shadow p-2 col-lg-6">
+          <div class="col-md-12 shadow p-2 col-lg-6 border rounded">
             <div class="row">
               <div class="col-md-3 col-sm-12">
                 <img
                   src="images/course/course-3.png"
                   alt=""
-                  class="img-fluid h-100"
+                  class="img-fluid w-100 h-100"
                 />
               </div>
               <div class="col-md-9">
@@ -263,13 +266,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 shadow p-2 col-lg-6">
+          <div class="col-md-12 shadow p-2 col-lg-6 border rounded">
             <div class="row">
               <div class="col-md-3 col-sm-12">
                 <img
                   src="images/course/course-4.png"
                   alt=""
-                  class="img-fluid h-100"
+                  class="img-fluid w-100 h-100"
                 />
               </div>
               <div class="col-md-9">
@@ -283,13 +286,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 shadow p-2 col-lg-6">
+          <div class="col-md-12 shadow p-2 col-lg-6 border rounded">
             <div class="row">
               <div class="col-md-3 col-sm-12">
                 <img
                   src="images/course/course-5.png"
                   alt=""
-                  class="img-fluid h-100"
+                  class="img-fluid w-100 h-100"
                 />
               </div>
               <div class="col-md-9">
@@ -304,13 +307,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 shadow p-2 col-lg-6">
+          <div class="col-md-12 shadow p-2 col-lg-6 border rounded">
             <div class="row">
               <div class="col-md-3 col-sm-12">
                 <img
                   src="images/course/course-6.png"
                   alt=""
-                  class="img-fluid h-100"
+                  class="img-fluid w-100 h-100"
                 />
               </div>
               <div class="col-md-9">
@@ -340,16 +343,16 @@
     </section>
 
     <section>
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col-md-3">
+      <div class="container mt-5 rounded">
+        <div class="row border">
+          <div class="col-md-3 ps-0">
             <img
               src="images/student/student-1.png"
               alt=""
-              class="img-fluid h-100"
+              class="img-fluid w-100 h-100"
             />
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 p-4">
             <h2>Explore The E-learning Institute</h2>
             <p class="text-secondary mb-4">
               E-learning is a type of learning conducted digitally via
@@ -371,17 +374,17 @@
 
     <section>
       <div class="container mt-5">
-        <div class="row bg-primary text-light p-4">
-          <div class="col-md-6 mx-auto my-auto">
+        <div class="row bg-primary text-light p-4 border rounded text-center">
+          <div class="col-lg-6 col-md-12 mx-auto my-auto">
             <h2 class="mt-5 mb-4">Ready to join?</h2>
             <p>
               It is a long established fact that a reader will be distracted by
               the readable content of a page when looking at its layout.
             </p>
           </div>
-          <div class="col-md-6 my-auto mx-auto px-5">
+          <div class="col-lg-6 col-md-12 my-auto mx-auto px-5">
             <button
-              class="btn btn-light px-5 text-primary py-1"
+              class="btn btn-light px-5 text-primary py-1 mx-auto text-center mt-3"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal"
             >
@@ -600,7 +603,7 @@
                     objects individually—it makes no sense to say "Jim is
                     before" or "Jim is after"—but to one thing in relation to
                     another, as in "The wedding is before the reception" and
-                    "The reception is after the wedding".</strong
+                    "The reception is after the wedding"..</strong
                   >
                 </div>
               </div>
@@ -622,24 +625,48 @@
 
     <section>
       <div class="container mt-5">
-        <div class="row g-4 d-none d-lg-block d-xl-none">
-          <div class="col-md-2">
-            <img src="images/company/company-1.png" alt="" class="img-fluid" />
+        <div class="row">
+          <div class="col-lg-2 d-none d-lg-block">
+            <img
+              src="images/company/company-1.png"
+              alt=""
+              class="img-fluid w-100"
+            />
           </div>
-          <div class="col-md-2">
-            <img src="images/company/company-2.png" alt="" class="img-fluid" />
+          <div class="col-lg-2 d-none d-lg-block">
+            <img
+              src="images/company/company-2.png"
+              alt=""
+              class="img-fluid w-100"
+            />
           </div>
-          <div class="col-md-2">
-            <img src="images/company/company-3.png" alt="" class="img-fluid" />
+          <div class="col-lg-2 d-none d-lg-block">
+            <img
+              src="images/company/company-3.png"
+              alt=""
+              class="img-fluid w-100"
+            />
           </div>
-          <div class="col-md-2">
-            <img src="images/company/company-4.png" alt="" class="img-fluid" />
+          <div class="col-lg-2 d-none d-lg-block">
+            <img
+              src="images/company/company-4.png"
+              alt=""
+              class="img-fluid w-100"
+            />
           </div>
-          <div class="col-md-2">
-            <img src="images/company/company-5.png" alt="" class="img-fluid" />
+          <div class="col-lg-2 d-none d-lg-block">
+            <img
+              src="images/company/company-5.png"
+              alt=""
+              class="img-fluid w-100"
+            />
           </div>
-          <div class="col-md-2">
-            <img src="images/company/company-6.png" alt="" class="img-fluid" />
+          <div class="col-lg-2 d-none d-lg-block">
+            <img
+              src="images/company/company-6.png"
+              alt=""
+              class="img-fluid w-100"
+            />
           </div>
         </div>
       </div>
@@ -656,22 +683,23 @@
           <p>Privacy Ploicy | Terms of use</p>
 
           <div class="text-center">
-            <button class="btn fs-2">
-              <a href="https://www.facebook.com/md.aklasur/"
-                ><i class="fa-brands fa-facebook"></i
-              ></a>
-            </button>
+            <a href="https://www.facebook.com/md.aklasur/"
+              ><i
+                class="fa-brands fa-facebook fs-2 me-3 text-light rounded-circle"
+              ></i
+            ></a>
 
-            <button class="btn fs-2">
-              <a href="https://www.linkedin.com/feed/"
-                ><i class="fa-brands fa-twitter"></i>
-              </a>
-            </button>
-            <button class="btn fs-2">
-              <a href="https://www.instagram.com/aklasur_rahman_robin/"
-                ><i class="fa-brands fa-linkedin"></i
-              ></a>
-            </button>
+            <a href="https://www.linkedin.com/feed/"
+              ><i
+                class="fa-brands fa-twitter fs-2 me-3 text-light rounded-circle"
+              ></i>
+            </a>
+
+            <a href="https://www.instagram.com/aklasur_rahman_robin/"
+              ><i
+                class="fa-brands fa-linkedin fs-2 me-3 text-light rounded-circle"
+              ></i
+            ></a>
           </div>
         </div>
       </div>
