--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#Register"
+                <a class="nav-link" aria-current="page" href="#Contact"
                   >Register</a
                 >
               </li>
@@ -490,7 +490,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="accordion" id="accordionPanelsStayOpenExample">
+          <div class="accordion col-lg-8 mx-auto" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                 <button
